--- a/src/style/plot-style.css
+++ b/src/style/plot-style.css
@@ -8,7 +8,7 @@
 .vdp-plot-highlight {
     position: absolute;
     background-color: black;
-    
+    pointer-events: none;
 }
 .vdp-tooltip {
     position: absolute;
